Fix some minor layout issues on mobile

--- a/_assets/scss/partials/_images.scss
+++ b/_assets/scss/partials/_images.scss
@@ -22,7 +22,7 @@ figure {
     margin-bottom: $baseline/2;
 
     @media ( max-width: $breakpoint-small ) {
-      max-width: calc( 100% + #{$baseline} );
+      max-width: none;
       width: calc( 100% + #{$baseline} );
       margin-left: -$baseline/2;
       margin-right: -$baseline/2;
@@ -47,7 +47,7 @@ figure {
     margin-bottom: $baseline/2;
 
     @media ( max-width: $breakpoint-small ) {
-      max-width: calc( 100% + #{$baseline} );
+      max-width: none;
       width: calc( 100% + #{$baseline} );
       margin-left: -$baseline/2;
       margin-right: -$baseline/2;
