--- a/_assets/scss/partials/_variables.scss
+++ b/_assets/scss/partials/_variables.scss
@@ -9,7 +9,7 @@
 
 // Group: Unit Sizes
 $base-font-size: (17/16)*100%;
-$baseline-unitless: 28 / (16*($base-font-size/100%));
+$baseline-unitless: 27 / (16*($base-font-size/100%));
 $baseline: $baseline-unitless * 1rem;
 
 
